--- a/app/src/main/res/layout/activity_gps.xml
+++ b/app/src/main/res/layout/activity_gps.xml
@@ -34,4 +34,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="183dp"
+        android:layout_height="wrap_content"
+        android:text="Back" />
 </android.support.design.widget.CoordinatorLayout>
