--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -30,13 +30,11 @@
             android:id="@+id/title_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TITLE"
             android:textSize="30sp" />
 
         <TextView
             android:id="@+id/description_main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="DESCRIPTION" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
